CaseStatus page & rate case added

--- a/src/main/resources/static/pages/profile/profile.html
+++ b/src/main/resources/static/pages/profile/profile.html
@@ -74,7 +74,7 @@
                         <li> <a class="waves-effect waves-dark"
                                 href="http://localhost:8080/#!/profile" aria-expanded="false"><i
                                     class="fa fa-user"></i><span class="hide-menu">پروفایل</span></a></li>
-                        <li> <a class="waves-effect waves-dark" href="http://localhost:8080/IE-proj//index.html#!/case"
+                        <li> <a class="waves-effect waves-dark" href="http://localhost:8080/#!/case"
                                 aria-expanded="false"><i class="fa fa-table"></i><span class="hide-menu"></span>ثبت
                                 مورد</a></li>
                         <li> <a class="waves-effect waves-dark"
