--- a/src/main/resources/static/pages/DoCase/doCase.html
+++ b/src/main/resources/static/pages/DoCase/doCase.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <!-- login & register button -->
-                <div class="nav-btns col-md-6">
+                <div class="nav-btns col-md-6" ng-controller="welcomeCtrl">
                     خوش آمدی {{name}}!
                     <button class="btn btn-primary"><i class="fas fa-user"></i></button>
                 </div>
