--- a/src/main/resources/static/pages/reporting/reporting.html
+++ b/src/main/resources/static/pages/reporting/reporting.html
@@ -38,7 +38,7 @@
 
 
                 <!-- login & register button -->
-                <div class="nav-btns col-md-6">
+                <div class="nav-btns col-md-6" ng-controller="welcomeCtrl">
                     خوش آمدی {{name}}!
                     <button class="btn btn-primary"><i class="fas fa-user"></i></button>
                 </div>
